# presto-benchmarking

./: .gitignore  Snakefile  pyproject.toml  workflow_config.yaml
configs/: aimnet2.yaml  orb.yaml  orb_max_extend_1.yaml  orb_no_msm_no_min.yaml
convenience_functions/: _cli.py  _plotting_defaults.py  _stats.py  ablation_comparison.py  analyse_folmsbee.py  combine_ffs.py  filter_qca_torsions.py  get_folmsbee_input.py  get_qca_input.py  presto_fitting_analysis.py  run_presto.py  smiles_descriptor_analysis.py  split_qca_input.py  tyk2_congeneric_series.py  tyk2_reproducibility.py  yammbs_torsion_analysis.py
convenience_functions/protein_2d_torsions/: minimise.py  plot.py
input_ff/: README.md  aceff20.offxml  aimnet2.offxml  esp04.offxml
input_ff/from_sandbox/ff_files/jnk1/: bespoke_ff.offxml
input_ff/from_sandbox/ff_files/p38/: bespoke_ff.offxml
input_ff/from_sandbox/ff_files/tyk2/: bespoke_ff.offxml
