[project]
name = "presto-benchmark"
version = "0.1.0"
description = "Presto benchmarking workflow"
requires-python = ">=3.12"

[project.scripts]
presto-benchmark = "convenience_functions._cli:app"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "openeye"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.feature.common.dependencies]
python = ">=3.12"
pip = "*"
openff-toolkit = ">=0.18.0"
openff-units = "*"
openff-qcsubmit = ">=0.55.0"
openff-interchange = ">=0.5.2"
loguru = "*"
seaborn = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"
ipdb = "*"
bokeh = "*"
panel = "*"
openbabel = "*"
crest = "*"
statannotations = "*"
pingouin = ">=0.5.5,<0.6"
openmmforcefields = ">=0.15.1,<0.16"
openeye-toolkits = ">=2025.2.1,<2026"
ruff = "*"
mypy = "*"
pre-commit = "*"
mdanalysis = ">=2.10.0,<3"
typer = "*"
qcelemental = "*"
nglview = "*"
jupyter = "*"
qcfractal = ">=0.63"


[tool.pixi.feature.common.pypi-dependencies]
presto-benchmark = { path = ".", editable = true }

[tool.pixi.feature.standard.dependencies]
pyyaml = "*"
datasets = "*"
openmm = ">=8.5.0"
tensorboardX = "*"
tensorboard = "*"
versioneer = "*"
pytorch-gpu = "==2.8.0"
pydantic = ">=2"
pydantic-settings = "*"
pydantic-units = "*"
cuda-version = ">=12"
openmm-ml = ">=1.6"
# openmm-torch = ">=1.5.1"
torchmd-net = ">=3.0.3"
cuda-cudart-dev = ">=12,<13"

[tool.pixi.feature.standard.pypi-dependencies]
mace-torch = "==0.3.15"
smee = { git = "https://github.com/openforcefield/smee.git", rev = "36bc8286b16ae815f13cfb10d8096ff1b9aeca0e" }
descent = { git = "https://github.com/openforcefield/descent", rev = "15101d021d2a387809f0d877c61d4baabecdc78e" }
# Use local presto install for development
# presto = { path = "/home/campus.ncl.ac.uk/nfc78/software/devel/presto-clean/", editable = true }
yammbs = { git = "https://github.com/fjclark/yammbs", rev = "ebe7e5eb61d9ea73e0f972fea4c3ff748b2515b3" }
smirnoff-plugins = { git = "https://github.com/fjclark/smirnoff-plugins", rev = "fd4e8e71a0a2c710d662f6001cabc802a5097cf6" }
deepchem = { version = ">=2.7.0", extras = ["jax"] } # Interferes with pytorch if ["torch"]
# AIMNet Stuff
aimnet = ">=0.1.0"
# aimnet doesn't like more recent versions
nvalchemi-toolkit-ops = "==0.2.0"

[tool.pixi.feature.presto-default.pypi-dependencies]
presto = { git = "https://github.com/cole-group/presto.git", rev = "1aa5eb6c743fd6150dc127f943dce54471ead6ba" }

[tool.pixi.feature.presto-save-ff-trajectory.pypi-dependencies]
presto = { git = "https://github.com/cole-group/presto.git", rev = "15d11cf9649df5a1497973cd413d2f354ba7e76c" }

[tool.pixi.feature.espaloma.dependencies]
espaloma = ">=0.3.1"

[tool.pixi.feature.garnet.dependencies]
rustworkx = "*"
pyxdg = "*"
torch-geometric = "*"

[tool.pixi.feature.garnet.pypi-dependencies]
garnetff = "*"
igraph = "*"


[tool.pixi.environments]
default = {features = ["common", "standard", "garnet", "presto-default"]}
default-save-ff-trajectory = {features = ["common", "standard", "garnet", "presto-save-ff-trajectory"]}
espaloma = {features = ["common", "espaloma", "presto-default"]}

[tool.setuptools.package-dir]
"presto_benchmark" = "convenience_functions"

[tool.setuptools.packages.find]
where = ["."]
include = ["convenience_functions*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.tasks]
pre-commit = { cmd = "pre-commit run --all-files" }
lint = { cmd = "ruff check convenience_functions" }
format = { cmd = "ruff format convenience_functions && ruff check --fix --select I convenience_functions" }
type-check = { cmd = "mypy --follow-imports=silent --ignore-missing-imports --strict convenience_functions" }

[tool.pixi.dependencies]
cmcrameri = ">=1.9,<2"
